# UtaOto

./: CMakeLists.txt  main.cpp  vcpkg.json
cpp/: audiofile.cpp  audiostream.cpp  synthesizer.cpp  utils.cpp
include/: audio.h  audiofile.h  audiostream.h  synthesizer.h  utils.h
